--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,7 @@ body{
     align-items: center;
     background-color: black;
     margin: 0;
-    font-family:  Helvetica, Arial, sans-serif;
+    font-family:  'Courier New', Courier, monospace
     font-weight: bold;
 }
 
