--- a/styles.css
+++ b/styles.css
@@ -3,10 +3,9 @@ body{
     display: flex;
     flex-direction: column;
     align-items: center;
-    background-color: black;
+    background-color: rgb(241, 241, 241);
     margin: 0;
-    font-family:  'Courier New', Courier, monospace
-    font-weight: bold;
+    font-family:   Helvetica, Arial, sans-serif;
 }
 
 header {
@@ -14,6 +13,14 @@ header {
     font-size: 4vmax;
     color: gray;
     font-weight: bold;
+}
+
+.alertMsg{
+    font-size: 1.5vmax;
+    margin:0 0 2.5% 0;
+    color: red;
+    font-weight: bold;
+    text-align: center;
 }
  .calculatorFrame{
     display: flex;
@@ -23,7 +30,7 @@ header {
     border-radius: 6px;
     width:30%;
 }
-.displayScreen{
+.displayScreen {
     background-color: grey;
     width: 100%;
     min-height: 100px;
@@ -33,11 +40,15 @@ header {
     border-top-left-radius: 6px;
     border-top-right-radius: 6px;
     display: flex;
-    align-items:center;
-    justify-content: right;
-    font-size: 5vmax;
-    color:white;
+    flex-direction: row-reverse;
+    align-items: center;
     
+}
+
+.displayInput{
+    border: none;
+    font-size: 3vmax;
+    color:white;    
 }
 .inputArea{
     display: flex;
@@ -70,11 +81,8 @@ button {
 
 .equals{
     background-color: darkred;
+    /* flex-grow:1; */
 }
-.equals{
-    flex-grow:1;
-}
-
 footer {
     margin-top:2.5%;
     color: gray;
