--- a/styles.css
+++ b/styles.css
@@ -9,7 +9,7 @@ body{
 }
 
 header {
-    margin: 2.5% 0;
+    margin: 0.5% 0 1% 0;
     font-size: 4vmax;
     color: gray;
     font-weight: bold;
@@ -17,7 +17,7 @@ header {
 
 .alertMsg{
     font-size: 1.5vmax;
-    margin:0 0 2.5% 0;
+    margin:0 0 1% 0;
     color: red;
     font-weight: bold;
     text-align: center;
@@ -26,7 +26,8 @@ header {
     display: flex;
     flex-direction: column;
     align-items: center;
-    border:0.5px solid grey;
+    border:6px solid black;
+    background-color: black;
     border-radius: 6px;
     width:30%;
 }
@@ -73,6 +74,7 @@ button {
 
 .misc {
     background-color: darkgray;
+    border-top:2px solid black;
 }
 
 .operators {
@@ -83,8 +85,16 @@ button {
     background-color: darkred;
     /* flex-grow:1; */
 }
+
+.zero {
+    border-bottom-left-radius: 6px;
+}
+.add{
+    border-bottom-right-radius: 6px;
+}
+
 footer {
-    margin-top:2.5%;
+    margin-top:0.5%;
     color: gray;
     
 }
